tests/trybuild/views/comma_alone.stderr
error: no rules expected the token `,`
 --> tests/trybuild/views/comma_alone.rs:3:23
  |
3 | type MyViews = Views!(,);
  |                       ^ no rules expected this token in macro call
  |
note: while trying to match meta-variable `$view:ty`
 --> src/query/view/mod.rs
  |
  |             ($view:ty $(,$views:ty)* $(,)?) => (
  |              ^^^^^^^^
