tests/trybuild/views/comma_alone.rs
use brood::query::Views;

type MyViews = Views!(,);

fn main() {}
